--- a/src/app/linesOfBusiness/linesOfBusiness.component.html
+++ b/src/app/linesOfBusiness/linesOfBusiness.component.html
@@ -24,3 +24,13 @@
     
   </li>
 </ul>
+<ul class="linesOfBusiness">
+  <li *ngFor="let recentQuote of recentQuotes">
+    <a routerLink="/detail/{{recentQuote.id}}">
+      
+      <span class="badge">{{recentQuote.id}}</span> {{recentQuote.quoteNumber}} - {{recentQuote.lineOfBusiness}}
+    </a>
+   
+    
+  </li>
+</ul>
