Most Popular Quotes
Summed and displayed count of popular quotes

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,9 @@
+<app-recentQuotes></app-recentQuotes>
 <h2>Popular Lines Of Business</h2>
 <div class="linesOfBusiness-menu">
   <a *ngFor="let lineOfBusiness of linesOfBusiness"
       routerLink="/detail/{{lineOfBusiness.id}}">
       {{lineOfBusiness.name}}
-  </a>
-  <br>
-  <a *ngFor="let recentQuote of recentQuotes"
-      routerLink="/detail/{{recentQuote.id}}">
-      {{recentQuote.quoteNumber}}
   </a>
 </div>
 
