--- a/src/app/lineOfBusiness-detail/lineOfBusiness-detail.component.html
+++ b/src/app/lineOfBusiness-detail/lineOfBusiness-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="lineOfBusiness">
+<div *ngIf="lineOfBusiness" >
   <h2>{{lineOfBusiness.name | uppercase}} Details</h2>
   <div><span>id: </span>{{lineOfBusiness.id}}</div>
   <div>
@@ -8,6 +8,13 @@
     <label for="lineOfBusiness-description">Line Of Business Description: </label>
     <input id="lineOfBusiness-description" [(ngModel)]="lineOfBusiness.description" placeholder="Line Of Business Description"/>
   </div>
+  
+<div>
+  <span>Number of Quotes: </span>
+ <app-recentQuotes></app-recentQuotes>
+</div>
   <button (click)="goBack()">Go Back</button>
   <button (click)="save()">Save</button>
 </div>
+
+
